# rusty-foos

./: Cargo.toml  config.json  deploy.sh
src/: events.rs  game.rs  game_state.rs  main.rs  server.rs
