[package]
name = "parallel"
version = "0.1.0"
authors = ["jeremy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
rppal = "0.11.3"
ws = "0.9.1"